Fix visibility problem for tag with closed panel on mobile

--- a/themes/timetree/assets/scss/components/_panel.scss
+++ b/themes/timetree/assets/scss/components/_panel.scss
@@ -274,9 +274,15 @@ body.home main > aside {
 // special case: tag is active but intro panel is closed
 body.tag-active.home main > aside {
   @include for-mobile {
-    // panel should be exactly the height of the tag on mobile
+    // closed panel should be exactly the height of the tag on mobile
     &.closed {
       height: $tag-height;
+      visibility: visible;
+
+      // ensure nested content remains hidden from screen readers
+      article {
+        visibility: hidden;
+      }
     }
   }
 }
